[[bin]]
name = "refracted"
path = "src/main.rs"

[build-dependencies]
base64 = "0.22"
image = "0.24"
toml = "0.8"
winres = "0.1"

[dependencies]
aes = "0.8"
anyhow = "1.0"
base64 = "0.22"
block-padding = "0.3"
bytes = "1.0"
cbc = "0.1"
chrono = "0.4"
colored = "2.0"
eframe = "0.27"
egui = "0.27"
flate2 = "1.0"
futures = "0.3"
generic-array = "0.14"
h2 = "0.3"
hex = "0.4"
http = "0.2"
image = "0.24"
md5 = "0.7"
parking_lot = "0.12"
rand = "0.8"
rc4 = "0.1"
rcgen = "0.12"
rfd = "0.13"
rustls = "0.21"
rustls-pemfile = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10"
socket2 = "0.5"
thiserror = "1.0"
tokio-rustls = "0.24"
tracing = "0.1"

[dependencies.indexmap]
features = ["serde"]
version = "2.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
features = ["full"]
version = "1.0"

[dependencies.tokio-util]
features = [
    "io",
    "compat",
]
version = "0.7"

[dependencies.tracing-subscriber]
features = [
    "env-filter",
    "registry",
    "chrono",
]
version = "0.3"

[dependencies.winapi]
features = [
    "wincon",
    "processthreadsapi",
    "winbase",
]
version = "0.3"

[package]
build = "build.rs"
edition = "2021"
name = "refracted"
version = "0.4.806"
